# geometry.hpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
bench/: geometry.cpp
include/maplibre/: feature.hpp  geometry.hpp  geometry_io.hpp
include/maplibre/geometry/: box.hpp  empty.hpp  envelope.hpp  for_each_point.hpp  geometry.hpp  line_string.hpp  multi_line_string.hpp  multi_point.hpp  multi_polygon.hpp  point.hpp  point_arithmetic.hpp  polygon.hpp
test/: empty.cpp  envelope.cpp  feature.cpp  for_each_point.cpp  geometry.cpp  geometry_collection.cpp  io.cpp  line_string.cpp  multi_line_string.cpp  multi_point.cpp  multi_polygon.cpp  point.cpp  polygon.cpp
